# HybridQA-Net-API

./: .gitignore  CLAUDE_MEMORY.md  Dockerfile  README.md  TRAINING.md  docker-compose.yml  example_usage.py  requirements.txt  training_history.json
.claude/: settings.local.json
api/: __init__.py  main.py  middleware.py  routes.py  schemas.py
configs/: config.yaml
src/: __init__.py  cache.py  pipeline.py  yolo_clip_pipeline.py
src/fusion/: __init__.py  cross_attention.py  decision_head.py
src/nlp/: __init__.py  context_analyzer.py  document_parser.py
src/report/: __init__.py  generator.py
src/vision/: __init__.py  backbone.py  clip_matcher.py  detector.py  gradcam.py  preprocessor.py
tests/: __init__.py  test_nlp.py  test_pipeline.py  test_vision.py
tools/: generate_dataset.py
training/: __init__.py  dataset.py  trainer.py
ui/tui/: Cargo.toml
ui/tui/src/: main.rs
ui/web/: index.html
utils/: __init__.py  helpers.py  logger.py
